* ADD: episode 8, autogenerating http clients from swagger files
