# handlers/get.go
@@ -13,7 +13,7 @@ import (
 // ListAll handles GET requests and returns all current products
 func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 	p.l.Println("[DEBUG] get all records")
-
+	rw.Header().Add("Content-type", "application/json")
 	prods := data.GetProducts()
 
 	err := data.ToJSON(prods, rw)
@@ -23,7 +23,7 @@ func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 	}
 }
 
-// swagger:route GET /products/{id} products listSingle
+// swagger:route GET /products/{id} products listSingleProduct
 // Return a list of products from the database
 // responses:
 //	200: productResponse
